# picstore

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
monitoring/prometheus/: prometheus.yml
src/: main.rs  postgres.rs  s3.rs
src/form/: download.rs  mod.rs  update.rs  upload.rs
src/sql/: add-picture.sql  add-scope.sql  add-user-scope.sql  add-user.sql  create-tables.sql  delete-picture.sql  picture-in-scope.sql  scope-id.sql  user-id.sql  user-in-scope.sql  user-scope-picture-valid.sql
