[package]
name = "picstore"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.13.0"
anyhow = "1.0.102"
bytes = "1.11.1"
env_logger = "0.11.10"
log = "0.4.29"
minio = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.17"
